src/objects/loan__Group__c.object
<CustomObject>
    <description>SHG</description>
    <fields>
        <fullName>loan__Address_2__c</fullName>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Address_3__c</fullName>
        <label>Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Assigned_LO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LO assigned to group</description>
        <label>Loan Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Individual_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center</label>
        <referenceTo>loan__Center__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__City__c</fullName>
        <label>City</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>INDIA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Current_Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Loan Officer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.loan__Office__c</field>
                <operation>equals</operation>
                <valueField>loan__Staff__c.loan__Branch__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Staff__c</referenceTo>
        <relationshipLabel>Groups (Current Loan Officer)</relationshipLabel>
        <relationshipName>Groups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__External_ID__c</fullName>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Fees_Collected__c</fullName>
        <description>Fees Collected</description>
        <inlineHelpText>Fees Collected</inlineHelpText>
        <label>Fees Collected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__GroupCnt__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Group Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Group_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Group External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Group_Fee_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Group Fee Set</description>
        <inlineHelpText>Group Fee Set</inlineHelpText>
        <label>Group Fee Set</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected Fee Set&apos;s category must be of type &apos;Group&apos; and it should include at least one fee.</errorMessage>
            <filterItems>
                <field>loan__Fee_Set__c.loan__Fee_Set_Category__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <filterItems>
                <field>loan__Fee_Set__c.loan__Number_of_Fees__c</field>
                <operation>notEqual</operation>
                <value>0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Fee_Set__c</referenceTo>
        <relationshipLabel>Group/Individual Registration</relationshipLabel>
        <relationshipName>Group_Individual_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Group_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This client is the group leader. The selected client must belong to this group to be assigned as a leader.</inlineHelpText>
        <label>Group Leader</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Client__c.loan__Group__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>loan__Client__c.loan__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Client__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Group_Status__c</fullName>
        <label>Group Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Application</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Group_System_ID__c</fullName>
        <description>System Generated Group System ID</description>
        <displayFormat>Group-{0000}</displayFormat>
        <label>Group System ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>loan__Last_Meeting_Date__c</fullName>
        <label>Last Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Maximum_number_of_persons__c</fullName>
        <label>Maximum number of persons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Meeting_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting Schedule</label>
        <referenceTo>loan__Meeting_Schedule__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Minimum_number_of_persons__c</fullName>
        <label>Minimum number of persons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Next_Meeting_Date__c</fullName>
        <label>Next Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Notes__c</fullName>
        <label>Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Number_of_Active_Clients__c</fullName>
        <label>Number of Active Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked to this office</description>
        <inlineHelpText>Linked to this office</inlineHelpText>
        <label>Branch</label>
        <referenceTo>loan__Office_Name__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Question_Groups__c</fullName>
        <label>Question Groups</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Source_Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Loan Officer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Staff__c.loan__Branch__c</field>
                <operation>equals</operation>
                <valueField>$Source.loan__Office__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Staff__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Andaman and Nicobar Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Prades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadra and Nagar Haveli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daman and Diu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu and Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshadweep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipurß</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orissa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puducherry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sikkim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Telephone_No__c</fullName>
        <label>Telephone No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Fees_Charged__c</fullName>
        <description>Total Fees Charged</description>
        <inlineHelpText>Total Fees Charged</inlineHelpText>
        <label>Total Fees Charged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Trained_On__c</fullName>
        <label>Trained On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Trained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Zone__c</fullName>
        <label>Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>loan__Address1_Special_char_check</fullName>
        <active>true</active>
        <description>Address1_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(  loan__Address_Line_1__c  , &quot;^[a-zA-Z0-9-&amp;/#\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>loan__Address_Line_1__c</errorDisplayField>
        <errorMessage>Address should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Address2_Special_char_check</fullName>
        <active>true</active>
        <description>Address2_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(   loan__Address_2__c   , &quot;^[a-zA-Z0-9-&amp;/#\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>loan__Address_2__c</errorDisplayField>
        <errorMessage>Address should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Address3_Special_char_check</fullName>
        <active>true</active>
        <description>Address3_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(   loan__Address_3__c   , &quot;^[a-zA-Z0-9-&amp;/#\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>loan__Address_3__c</errorDisplayField>
        <errorMessage>Address should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Center_Belongs_To_Branch</fullName>
        <active>true</active>
        <errorConditionFormula>(loan__Center__c  &lt;&gt; NULL) &amp;&amp; (loan__Center__r.loan__Branch__r.Id  &lt;&gt;  loan__Office__r.Id)</errorConditionFormula>
        <errorMessage>User entered Center does not belong to this Branch.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__City_Special_char_check</fullName>
        <active>true</active>
        <description>City_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(   loan__City__c , &quot;^[a-zA-Z\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>loan__City__c</errorDisplayField>
        <errorMessage>City should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__ExternalID_Special_char_check</fullName>
        <active>true</active>
        <description>ExternalID_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(    loan__External_ID__c , &quot;^[a-zA-Z0-9\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>loan__External_ID__c</errorDisplayField>
        <errorMessage>ID should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Telephone_Special_char_check</fullName>
        <active>true</active>
        <description>Telephone_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(     loan__Telephone_No__c , &quot;^[a-zA-Z0-9\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>loan__Telephone_No__c</errorDisplayField>
        <errorMessage>Telephone no. should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Zipcode_check</fullName>
        <active>true</active>
        <description>Zipcode_check</description>
        <errorConditionFormula>NOT(REGEX(  loan__Zipcode__c , &quot;\\d{6}&quot;))</errorConditionFormula>
        <errorDisplayField>loan__Zipcode__c</errorDisplayField>
        <errorMessage>Invalid Zipcode</errorMessage>
    </validationRules>
</CustomObject>